--- a/assignment-9.html
+++ b/assignment-9.html
@@ -78,6 +78,9 @@
                     <li>
                         <a href="http://www.wired.com/wired/archive/3.06/xanadu.html" target="blank">Ted Nelson and The Curse of Xanadu</a>. This is a previous reading assignment. Read it if you havent read it.
                     </li>
+                    <li>
+                        The second reading is not ready yet. Please come back for an update later.
+                    </li>
                 </ul>
             <p>
                 <h2>Reading Due Date</h2>
