--- a/assignment-9.html
+++ b/assignment-9.html
@@ -79,7 +79,7 @@
                         <a href="http://www.wired.com/wired/archive/3.06/xanadu.html" target="blank">Ted Nelson and The Curse of Xanadu</a>. This is a previous reading assignment. Read it if you havent read it.
                     </li>
                     <li>
-                        The second reading is not ready yet. Please come back for an update later.
+                        <a href="readings/driscoll_dream_machines_iml400_draft.pdf" target="blank">Kevin Driscoll: Dream Machines</a> [Draft].
                     </li>
                 </ul>
             <p>
