--- a/assignment-9.html
+++ b/assignment-9.html
@@ -50,10 +50,10 @@
             </p>
 
             <p>
-                Let's define a landing page as whatever fills the browser window after the URL is loaded. In the case of a single-page design, this will be whatever content fills the browser window before any interaction with the user. Animations are not necessary but all content should be there, as well as functional links to placeholder pages or, in the case of a single page design, placeholder sections.
+                Let's define a landing page as the content presented to the user once they visit a URL. In the case of a single-page design, this will be the content filling the browser window prior to user interaction.  
             </p>
             <p>
-                This assignment requires that you implement a first iteration of your final project landing page.
+                This assignment requires that you implement a first iteration of your final project Landing Page. All static content should be provided, as well as functional hyperlinks to placeholder pages or, in the case of a single page design, placeholder sections. Animations and effects are not required.
             </p>
             
             <p>
@@ -68,7 +68,7 @@
                 
             </p>
             <p>
-                Next week we will host guest lecturer Kevin Driscoll. Kevin is a Digital Archeologist and a PhD student here at USC. He will tell us about his research on Ted Nelson and Xanadu, a failed project that once had a chance to become an alternate reality for what we now call the World Wide Web.
+                Next week we will host guest lecturer <a href="http://kevindriscoll.info/" target="blank">Kevin Driscoll</a>. Kevin is a Digital Archeologist and a PhD student here at USC. He will tell us about his research on Ted Nelson and Xanadu, a failed project that once had a chance to become an alternate reality for what we now call the World Wide Web.
             </p>
             <p>
                 There will be two required readings in preparation for this lecture:
