--- a/assignment-9.html
+++ b/assignment-9.html
@@ -50,10 +50,10 @@
             </p>
 
             <p>
-                Let's define a landing page as the content presented to the user once they visit a URL. In the case of a single-page design, this will be the content filling the browser window prior to user interaction.  
+                Let's define a Landing Page as the content presented to the user once they visit a URL. In the case of a single-page design, this will be the content filling the browser window prior to user interaction.  
             </p>
             <p>
-                This assignment requires that you implement a first iteration of your final project Landing Page. All static content should be provided, as well as functional hyperlinks to placeholder pages or, in the case of a single page design, placeholder sections. Animations and effects are not required.
+                This assignment requires the implementation of a first iteration of the Final Project Landing Page. All static content should be provided, as well as functional hyperlinks to placeholder pages or, in the case of a single page design, placeholder sections. Animations and effects are not required.
             </p>
             
             <p>
