--- a/css-transitions.html
+++ b/css-transitions.html
@@ -22,7 +22,7 @@ body{
 	height:200px;
 	background:gold;
 	-webkit-transform: rotateY(0deg) rotateX(0deg);
-	-webkit-transition: all 1s ease-in;
+	-webkit-transition: all 1s ease-out;
 
 }
 .door:hover{
