adding supersized and examples

--- a/scrollorama/index.html
+++ b/scrollorama/index.html
@@ -12,8 +12,29 @@
 	<script src="js/jquery-1.7.1.min.js"></script>
 	<script src="js/jquery.lettering-0.6.1.min.js"></script>
 	<script src="js/jquery.scrollorama.js"></script>
+	<style>
+	#temp-header ul{
+		position:fixed;
+		top:0;
+		left:0;
+		width:100%;
+		overflow:auto;
+	}
+	#temp-header li{
+		float:left;
+		font-size: 30px;
+		padding:0 20px;
+	}
+	</style>
 </head>
 <body>
+	<ul id="temp-header">
+		<li><a href="#fly-it">fly-it</a></li>
+		<li><a href="#spin-it">spin-it</a></li>
+		<li><a href="#examples-easing">examples-easing</a></li>
+		<li><a href="#smush-it">smush-it</a></li>
+	</ul>
+	
 	<a href="https://github.com/johnpolacek/scrollorama">
 		<img style="position: fixed; top: 0; right: 0; border: 0; z-index: 11;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" alt="Fork me on GitHub" />
 	</a>
