--- a/superscrollorama/simpledemo.html
+++ b/superscrollorama/simpledemo.html
@@ -7,9 +7,30 @@
 	
 	<link href='http://fonts.googleapis.com/css?family=Luckiest+Guy' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/normalize.css" type="text/css">
-	<link rel="stylesheet" href="css/style.css" type="text/css">	
+	<link rel="stylesheet" href="css/style.css" type="text/css">
+	<style>
+	#temp-header ul{
+		position:fixed;
+		top:0;
+		left:0;
+		width:100%;
+		overflow:auto;
+	}
+	#temp-header li{
+		float:left;
+		font-size: 30px;
+		padding:0 20px;
+	}
+	</style>	
 </head>
 <body class="simple-demo">
+	<ul id="temp-header">
+		<li><a href="#fly-it">fly-it</a></li>
+		<li><a href="#spin-it">spin-it</a></li>
+		<li><a href="#scale-it">scale-it</a></li>
+		<li><a href="#smush-it">smush-it</a></li>
+	</ul>
+
 	<div id="content-wrapper">
 
 		<div id="examples-1">
