--- a/fall-2012/index.html
+++ b/fall-2012/index.html
@@ -180,7 +180,7 @@
             </div>
             
             <div id="links">
-                <h3>Links</h3>
+                <h3>Resources</h3>
                 <ul>
                     <li>
                         <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a>
