--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             Hello World
         </div>
         
-        <h1>Welcome to IML 400 Spring 2013 </h1>
+        <h1>Welcome to IML 400 Spring 2013 [ <a href="IML400-Spring-2013-syllabus.pdf">Syllabus</a> ]</h1>
         <h3>Lecturer <a href="http://blacklog.mitplw.com/" target="blank">Luis  Blackaller</a></h3>
         <h3>Teacher Assistant <a href="http://ludipo.com" target="blank">Adam Liszkiewicz</a></h3>
         
