updating index page with resources

--- a/assignment-demo.html
+++ b/assignment-demo.html
@@ -1,9 +1,13 @@
 <style>
+body{
+	margin:0;
+	background:#111;
+}
 .hi{
 	font-family: arial;
 	font-size: 40px;
 	background: #222;
-	width:60px;
+	width:950px;
 	font-weight: bold;
 	margin:auto;
 	text-align:center;
@@ -15,18 +19,17 @@
 	color:gold;
 }
 </style>
+<body>
+	<div id="one" class="hi">
+		hi IML400
+	</div>
 
-
-<div id="one" class="hi">
-Team 1: The web in 1994
-Team 2: The web in 1998
-Team 3: The web in 2002
-Team 4: The web in 2006
-Team 5: The web in 2013
-</div>
-
-<div id="two" class="hi">
-	HI
-</div>
-
-<img src="img/evil-boy.jpeg" />
+	<div id="two" class="hi">
+		<li>Team 1: The web in 1994</li>
+		<li>Team 2: The web in 1998</li>
+		<li>Team 3: The web in 2002</li>
+		<li>Team 4: The web in 2006</li>
+		<li>Team 5: The web in 2013</li>
+		<img src="img/evil-boy.jpeg" />
+	</div>
+</body>
