--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <h3>Assignments</h3>
                 <ul>
                     <li>
-                        <a href="assignment-1.html" onclick="alert('coming soon')">History of the Web</a>
+                        <a href="assignment-1.html" onclick="//alert('coming soon')">History of the Web</a>
                     </li>
                 </ul>
             </div>
