--- a/fall-2012/assignment-5.html
+++ b/fall-2012/assignment-5.html
@@ -23,7 +23,7 @@
     		margin:40px auto;
     	}
         #assignment{
-            font-size:21x;
+            font-size:21px;
         }
         .due-date{
             color:gold;
