--- a/fall-2012/assignment-6.html
+++ b/fall-2012/assignment-6.html
@@ -29,7 +29,7 @@
     		margin:40px auto;
     	}
         #assignment{
-            font-size:21x;
+            font-size:21px;
         }
         .due-date{
             color:gold;
