--- a/fall-2012/assignment-9.html
+++ b/fall-2012/assignment-9.html
@@ -32,7 +32,7 @@
     		margin:40px auto;
     	}
         #assignment{
-            font-size:21x;
+            font-size:21px;
         }
         .due-date{
             color:gold;
