--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
                     <li>
                         <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a>
                     </li>
+                     <li>
+                        <a href="http://eloquentjavascript.net" target="blank">Eloquent Javascript</a>
+                    </li>
                     <li>
                         <a href="http://diveintohtml5.info/" target="blank">Dive into HTML5</a>
                     </li>
@@ -168,12 +171,14 @@
                     <li>
                         <a href="http://backbonejs.org/" target="blank">BackboneJS</a>
                     </li>
+                    <!--
                     <li>
                         <a href="http://johnpolacek.github.com/scrollorama/" target="blank">Scrollarama</a>
                     </li>
                     <li>
                         <a href="http://johnpolacek.github.com/superscrollorama/" target="blank">Superscrollarama</a>
                     </li>
+                    -->
                     <li>
                         <a href="http://stolksdorf.github.com/Parallaxjs/" target="blank">Parallax JS</a>
                     </li>
