--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                         <a href="http://eloquentjavascript.net" target="blank">Eloquent Javascript</a>
                     </li>
                     <li>
+                        <a href="http://voxeljs.com" target="blank">Browser based Voxel Framework</a>
+                    </li>
+                    <li>
                         <a href="http://diveintohtml5.info/" target="blank">Dive into HTML5</a>
                     </li>
                     <li>
