--- a/index.html
+++ b/index.html
@@ -138,7 +138,10 @@
                     <li>
                         <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a>
                     </li>
-                     <li>
+                    <li>
+                        <a href="http://www.sublimetext.com" target="blank">Sublime Text</a>, the best!
+                    </li>
+                    <li>
                         <a href="http://eloquentjavascript.net" target="blank">Eloquent Javascript</a>
                     </li>
                     <li>
