--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                         <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a>
                     </li>
                     <li>
-                        <a href="http://www.sublimetext.com" target="blank">Sublime Text</a>, the best!
+                        <a href="http://www.sublimetext.com" target="blank">Sublime Text Editor</a>
                     </li>
                     <li>
                         <a href="http://eloquentjavascript.net" target="blank">Eloquent Javascript</a>
                     </li>
                     <li>
-                        <a href="http://voxeljs.com" target="blank">Browser based Voxel Framework</a>
+                        <a href="http://voxeljs.com" target="blank">VoxelJS</a>
                     </li>
                     <li>
                         <a href="http://diveintohtml5.info/" target="blank">Dive into HTML5</a>
