--- a/index.html
+++ b/index.html
@@ -136,6 +136,9 @@
                 <h3>Resources</h3>
                 <ul>
                     <li>
+                        <a href="links.html">Optional Readings</a>
+                    </li>
+                    <li>
                         <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a>
                     </li>
                     <li>
