--- a/assignment-1.html
+++ b/assignment-1.html
@@ -50,11 +50,11 @@
             </p>
         
             <p>
-                <li>Team 1: The web in 1994</li>
-                <li>Team 2: The web in 1998</li>
-                <li>Team 3: The web in 2002</li>
-                <li>Team 4: The web in 2006</li>
-                <li>Team 5: The web in 2013</li>
+                <li>Team 1: <a href="assignment-1/1994.html" target="blank">The web in 1994</a></li>
+                <li>Team 2: <a href="assignment-1/1998" target="blank">The web in 1998</a></li>
+                <li>Team 3: <a href="assignment-1/2002" target="blank">The web in 2002</a></li>
+                <li>Team 4: <a href="#" onClick="alert('we are still waiting :(');">The web in 2006</a></li>
+                <li>Team 5: <a href="#" onClick="alert('we are still waiting :(');">The web in 2013</a></li>
             </p>
         
             <h2>Due Dates</h2>
