--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                     <li>
                         <a href="assignment-1.html" onclick="//alert('coming soon')">History of the Web</a>
                     </li>
+                    <li>
+                        <a href="assignment-2.html" >Intro to HTML and CSS</a>
+                    </li>
                 </ul>
             </div>
             
