--- a/assignment-1.html
+++ b/assignment-1.html
@@ -54,7 +54,7 @@
                 <li>Team 2: <a href="assignment-1/1998" target="blank">The web in 1998</a></li>
                 <li>Team 3: <a href="assignment-1/2002" target="blank">The web in 2002</a></li>
                 <li>Team 4: <a href="assignment-1/2006.html" target="blank">The web in 2006</a></li>
-                <li>Team 5: <a href="#" onClick="alert('we are still waiting :(');">The web in 2013</a></li>
+                <li>Team 5: <a href="assignment-1/2013">The web in 2013</a></li>
             </p>
         
             <h2>Due Dates</h2>
