--- a/assignment-2.html
+++ b/assignment-2.html
@@ -71,10 +71,13 @@
                 <span class="due-date">Web Report: Tuesday, January 29th before class.</span> You're expected to deploy your report in your Storm Server and link to it from the cover page of your Storm Website.
             </p>
 
-            <h2>Resources</h2>
+            <h2>Examples</h2>
+            <p>
+                The following links will take you to a few example websites. Once there, please view source in Chrome so that you can read about the examples and look into the code.
+            </p>
         
             <p>
-                <li><a href="" target="blank"></a>Coming soon</li>
+                <li><a href="assignment-2-1.html" target="blank">self referential example</a></li>
             </p>
         </div>
     </div>
