--- a/assignment-2-1.html
+++ b/assignment-2-1.html
@@ -41,10 +41,10 @@ span{
 			<span>VIEW THE SOURCE VIEW THE SOURCE VIEW THE SOURCE VIEW THE SOURCE</span>
 		</div>
 		<div>
-			I wanted to see whether I could put together this whole page using only the five HTML tags and five CSS properties that I chose. It was not hard but it was very limiting :D
+			I wanted to see whether I could put together this whole page using only the five HTML tags and five CSS properties I chose. I wanted the description and the example to be the same thing. It was not hard but it was very limiting :D
 		</div>
 		<div>
-			You don't have to do this BTW. When you describe your tags and properties of choice, you are free to do whatever you want. It's only when you write your example that you can't feature anything else.
+			You don't have to do this BTW. You are free to do whatever you want to describe your tags and properties of choice. It's only when you write your example that you can't feature anything else. See what you can do with just five tags and five properties.
 		</div>
 		<div>
 			<span>VIEW THE SOURCE VIEW THE SOURCE VIEW THE SOURCE VIEW THE SOURCE</span>
