--- a/assignment-2.html
+++ b/assignment-2.html
@@ -77,7 +77,10 @@
             </p>
         
             <p>
-                <li><a href="assignment-2-1.html" target="blank">self referential example</a></li>
+                <li><a href="assignment-2-1.html" target="blank">Self referential example</a></li>
+            </p>
+            <p>
+                <li><a href="assignment-2-2.html" target="blank">Img and hover</a></li>
             </p>
         </div>
     </div>
