student site links

--- a/index.html
+++ b/index.html
@@ -117,11 +117,31 @@
             <div id="student-websites">
                 <h3>Students</h3>
                 <ul>
-                    <li>
-                        Coming Soon
-                    </li>
+                    <li><a href="http://storm.usc.edu/~pabella/">Paulina Sabrina Abella</a></li>
+                    <li><a href="http://storm.usc.edu/~pbamberg/">Phillip Bamberg</a></li>
+                    <li><a href="http://storm.usc.edu/~erdraper/">Eleanor Draper</a></li>
+                    <li><a href="http://storm.usc.edu/~stephaaf/">Stephanie Fong</a></li>
+                    <li><a href="http://storm.usc.edu/~hanabusa/">Michelle Hanabusa</a></li>
+                    <li><a href="http://storm.usc.edu/~hisamoto/">Matthew Hisamoto</a></li>
+                    <li><a href="http://storm.usc.edu/~smhudson/">Subrina Hudson</a></li>
+                    <li><a href="http://storm.usc.edu/~makaufma/">Matthew Kaufman</a></li>
+                    <li><a href="http://storm.usc.edu/~joshuajk/">Joshua Kim</a></li>
+                    <li><a href="http://storm.usc.edu/~juneko/">June Ko</a></li>
+                    <li><a href="http://storm.usc.edu/~majstori/">Michelle Majstorich</a></li>
+                    <li><a href="http://storm.usc.edu/~cmoses/">Curtis Moses</a></li>
+                    <li><a href="http://storm.usc.edu/~vincento/">Vincent Ong</a></li>
+                    <li><a href="http://storm.usc.edu/~penaia/">Raymond Penaia</a></li>
+                    <li><a href="http://storm.usc.edu/~rizwan/">Fatima Rizwan</a></li>
+                    <li><a href="http://storm.usc.edu/~aswenson/">Alexander Swenson</a></li>
+                    <li><a href="http://storm.usc.edu/~weary/">Evelina Weary</a></li>
+                    <li><a href="http://storm.usc.edu/~whittle">Lindy Whittlesey</a></li>
+                    <li><a href="http://storm.usc.edu/~shunfany/">Shun-Fang Yu</a></li>
                 </ul>
             </div>
+
+
+
+
 
             <div id="assignments">
                 <h3>Assignments</h3>
