--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
                 <ul>
                     <li><a href="http://storm.usc.edu/~pabella/">Paulina Sabrina Abella</a></li>
                     <li><a href="http://storm.usc.edu/~pbamberg/">Phillip Bamberg</a></li>
+                    <!--
                     <li><a href="http://storm.usc.edu/~erdraper/">Eleanor Draper</a></li>
+                    -->
                     <li><a href="http://storm.usc.edu/~stephaaf/">Stephanie Fong</a></li>
                     <li><a href="http://storm.usc.edu/~hanabusa/">Michelle Hanabusa</a></li>
                     <li><a href="http://storm.usc.edu/~hisamoto/">Matthew Hisamoto</a></li>
@@ -146,12 +148,9 @@
             <div id="assignments">
                 <h3>Assignments</h3>
                 <ul>
-                    <li>
-                        <a href="assignment-1.html" onclick="//alert('coming soon')">History of the Web</a>
-                    </li>
-                    <li>
-                        <a href="assignment-2.html" >Intro to HTML and CSS</a>
-                    </li>
+                    <li><a href="assignment-1.html" onclick="//alert('coming soon')">History of the Web</a></li>
+                    <li><a href="assignment-2.html" >Intro to HTML and CSS</a></li>
+                    <li><a href="assignment-3.html" >CSS Layout Properties</a></li>
                 </ul>
             </div>
             
