--- a/assignment-3.html
+++ b/assignment-3.html
@@ -40,7 +40,7 @@
             <h2>Individual Assignment</h2>
         
             <p>
-                Student’s storm class cover page  first iteration. Implement a simple design of a cover page to present links to class assignments and reading reports.
+                Student storm cover page first iteration. Implement a simple design of a cover page to present links to class assignments and reading reports.
             </p>
         
             <h2>Due Dates</h2>
