index edit Lindy

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <li><a href="http://storm.usc.edu/~rizwan/">Fatima Rizwan</a></li>
                     <li><a href="http://storm.usc.edu/~aswenson/">Alexander Swenson</a></li>
                     <li><a href="http://storm.usc.edu/~weary/">Evelina Weary</a></li>
-                    <li><a href="http://storm.usc.edu/~whittle">Lindy Whittlesey</a></li>
+                    <li><a href="http://storm.usc.edu/~lwhittle/">Lindy Whittlesey</a></li>
                     <li><a href="http://storm.usc.edu/~shunfany/">Shun-Fang Yu</a></li>
                 </ul>
             </div>
