examples for assignment 3 are in

--- a/assignment-3.html
+++ b/assignment-3.html
@@ -63,11 +63,15 @@
             </p>
 
             <h2>Examples</h2>
-            <p> Coming soon!
-            	<!--
-                The following links will take you to a few example websites. Once there, please view source in Chrome so that you can read about the examples and look into the code.
-            	-->
+            <p>
+                The following links will take you to a few example webpages. Once there, please view source in Chrome so that you can read about the examples and look into the code. Feel free to use them as a starting point.
             </p>
+            <ul>
+                <li><a href="layout-1.html" target="blank">CSS Layout Left Justified, Two Columns, Simple List</a></li>
+                <li><a href="layout-2.html" target="blank">CSS Layout Center Justified, Fixed Width Grid</a></li>
+                <li><a href="layout-3.html" target="blank">CSS Layout Left Justified, Variable Width Grid</a></li>
+                <li><a href="layout-4.html" target="blank">CSS Layout Full Page List</a></li>
+            </ul>
         </div>
     </div>
 </body>
