--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                         <a href="http://diveintohtml5.info/" target="blank">Dive into HTML5</a>
                     </li>
                     <li>
+                        <a href="http://html5boilerplate.com/" target="blank">HTML5 Boilerplate</a>
+                    </li>
+                    <li>
                         <a href="http://developers.google.com/chrome-developer-tools/" target="blank">Chrome Developer Tools</a>
                     </li>
                     <li>
