--- a/assignment-3.html
+++ b/assignment-3.html
@@ -54,7 +54,7 @@
             </p>
             
             <p>
-                Send an email to Luis and Adam with some thoughts about your readings.
+                Students should deploy a simple webpage with some thoughts about their readings and link it to their class index page.
             </p>
             
             <p>
