--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 <body>
     <div id="header">
-        <h3>Time Machine <a href="fall-2012/" target="blank">Fall 2012</a></h3>
+        <h3>Time Machine <a href="https://github.com/blackaller/IML-400">GitHub</a> <a href="fall-2012/" target="blank">Fall 2012</a></h3>
     </div>
 
     <div id="wrapper">
