--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     <li><a href="assignment-1.html" onclick="//alert('coming soon')">History of the Web</a></li>
                     <li><a href="assignment-2.html" >Intro to HTML and CSS</a></li>
                     <li><a href="assignment-3.html" >CSS Layout Properties</a></li>
-                    <li><a href="assignment-4.html" >Tab Based Multiple Page Navigation</a></li>
+                    <li><a href="assignment-4.html" >Multiple Page Navigation</a></li>
                 </ul>
             </div>
             
