--- a/assignment-4.html
+++ b/assignment-4.html
@@ -36,7 +36,7 @@
     <div id="wrapper">
         <div id="assignment">
             <h2><a href="index.html">IML 400 Spring 2013</a></h2>
-            <h2>Assignment 4: Class Cover Page: CSS Layout Properties</h2>
+            <h2>Assignment 4: Storytelling and Multiple Page Navigation</h2>
             <h2>Individual Assignment</h2>
         
             <p>
