--- a/assignment-4.html
+++ b/assignment-4.html
@@ -79,7 +79,10 @@
                 The following links will take you to a few example webpages. Once there, please view source in Chrome so that you can read about the examples and look into the code. Feel free to use them as a starting point.
             </p>
             <ul>
-                <li><a href="story-template-1/tabs-1.html" target="blank">Tab navigation across multiple pages using lists and floats</a></li>
+                <li><a href="story-template-1/tabs-1.html" target="blank">Tab navigation across multiple pages using lists and inline display</a></li>
+            </ul>
+            <ul>
+                <li><a href="story-template-2/menu-1.html" target="blank">Left menu navigation across multiple pages using lists</a></li>
             </ul>
         </div>
     </div>
