--- a/story-template-2/menu-3.html
+++ b/story-template-2/menu-3.html
@@ -3,11 +3,11 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>tab navigation 3</title>
+    <title>left menu navigation 3</title>
     <meta name="author" content="Luis Blackaller">
 
     <!-- this is how you link to an external CSS file:-->
-    <link href="css/tabs.css" rel="stylesheet" type="text/css">
+    <link href="css/menu.css" rel="stylesheet" type="text/css">
     
     <!-- you can still add custom css to each one fo your pages: -->
     <!-- Let's add some extra style to the <a> tag. NOTE that this style will ONLY work on this page. -->
@@ -26,11 +26,11 @@
     <body>
         <div id="nav-bar">
             <ul class="nav">
-                <li><a href="tabs-1.html">one</a></li>
-                <li><a href="tabs-2.html">two</a></li>
-                <li id="selected-tab"><a href="tabs-3.html" id="selected-link">three</a></li>
-                <li><a href="tabs-4.html" onclick="alert('nothing here yet');return(false);">four</a></li>
-                <li><a href="tabs-5.html" onclick="alert('nothing here yet');return(false);">five</a></li>
+                <li><a href="menu-1.html">one</a></li>
+                <li><a href="menu-2.html">two</a></li>
+                <li id="selected-tab"><a href="menu-3.html" id="selected-link">three</a></li>
+                <li><a href="menu-4.html" onclick="alert('nothing here yet');return(false);">four</a></li>
+                <li><a href="menu-5.html" onclick="alert('nothing here yet');return(false);">five</a></li>
             </ul>
         </div>
         <div id="content-wrapper">
@@ -43,7 +43,7 @@
             <h1>More content</h1>
 
             <p>
-                This particular HTML file is making reference to an <a href="css/tabs.css">external CSS file</a>.
+                This particular HTML file is making reference to an <a href="css/menu.css">external CSS file</a>.
             </p>
             <p>
                 And he took a horse and went forward.  And he came to an open level
