assignment 4 example zip files

--- a/assignment-4.html
+++ b/assignment-4.html
@@ -76,13 +76,13 @@
 
             <h2>Examples</h2>
             <p>
-                The following links will take you to a few example webpages. Once there, please view source in Chrome so that you can read about the examples and look into the code. Feel free to use them as a starting point.
+                The following links will take you to a few example websites. Once there, please view source in Chrome so that you can read about the examples and look into the code. Feel free to use them as a starting point.
             </p>
             <ul>
-                <li><a href="story-template-1/tabs-1.html" target="blank">Tab navigation across multiple pages using lists and inline display</a></li>
+                <li><a href="story-template-1/tabs-1.html" target="blank">Tab navigation across multiple pages using lists and inline display</a> - <a href="story-template-1.zip">Download Zip</li>
             </ul>
             <ul>
-                <li><a href="story-template-2/menu-1.html" target="blank">Left menu navigation across multiple pages using lists</a></li>
+                <li><a href="story-template-2/menu-1.html" target="blank">Left menu navigation across multiple pages using lists</a> - <a href="story-template-2.zip">Download Zip</li>
             </ul>
         </div>
     </div>
