editing sortablegrid example

--- a/assignment-5.html
+++ b/assignment-5.html
@@ -42,7 +42,7 @@
             </p>
         
             <p>
-                Redo the same illustrated story from your previous assignment (it is ok to change it if you want) using simple animated interface effects and transitions.
+                Redo the same story from your previous assignment (it is ok to change it if you want) using simple animated interface effects and transitions.
                 Sketch out your design on paper.
             </p>
 
