--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
                     <li><a href="assignment-2.html" >Intro to HTML and CSS</a></li>
                     <li><a href="assignment-3.html" >CSS Layout Properties</a></li>
                     <li><a href="assignment-4.html" >Multiple Page Navigation</a></li>
+                    <li><a href="assignment-5.html" >Intro to Javascript - Interactive Storytelling</a></li>
                 </ul>
             </div>
             
