ojo nuevo image file

--- a/fall-2012/JQueryUI-sortablegrid.html
+++ b/fall-2012/JQueryUI-sortablegrid.html
@@ -65,7 +65,7 @@
                     //document.getElementById(id).innerHTML += "\n" + "<li class='ui-state-default'>"+ i + "</li>";
                     $(id).append("<li class='ui-state-default' id='image-"+ k +"'><div class='interior'>" + k + "</div></li>");
                     $("#image-" + k).css("background", "#" + colorNum+colorNum+colorNum+colorNum+colorNum+colorNum);
-                    $("#image-" + k).css("background", "url('images/ojo.JPG')");
+                    $("#image-" + k).css("background", "url('images/ojo-2.jpg')");
                     $("#image-" + k).css("background-size", gridSize * cellSize );
                     //$("#image-" + k).css("background", "url('images/robot.png')");
                     $("#image-" + k).css("background-position", ( (1-j) * cellSize ) + "px" + " " + ( (1-i) * cellSize ) + "px");
