--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <li><a href="http://storm.usc.edu/~joshuajk/">Joshua Kim</a></li>
                     <li><a href="http://storm.usc.edu/~juneko/">June Ko</a></li>
                     <li><a href="http://storm.usc.edu/~majstori/">Michelle Majstorich</a></li>
+                    <li><a href="http://storm.usc.edu/~jackmorg/">Jack Morgan</a></li>
                     <li><a href="http://storm.usc.edu/~cmoses/">Curtis Moses</a></li>
                     <li><a href="http://storm.usc.edu/~vincento/">Vincent Ong</a></li>
                     <li><a href="http://storm.usc.edu/~penaia/">Raymond Penaia</a></li>
