--- a/assignment-6.html
+++ b/assignment-6.html
@@ -64,6 +64,7 @@
                     <li><a href="http://learn.jquery.com/" target="blank">JQuery Learning Center</a></li>
                     <li><a href="http://learn.jquery.com/javascript-101/" target="blank">Javascript 101</a></li>
                     <li><a href="http://learn.jquery.com/about-jquery/how-jquery-works/" target="blank">How JQuery works</a></li>
+                    <li><a href="http://try.jquery.com/" target="blank">Try JQuery</a></li>
                 </ul>
 
                 
