--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
                     <li><a href="assignment-4.html" >Multiple Page Navigation</a></li>
                     <li><a href="assignment-5.html" >Intro to Javascript</a></li>
                     <li><a href="assignment-6.html" >Javascript and JQuery</a></li>
+                    <li><a href="assignment-7.html" >Chrome Developer Tools</a></li>
                 </ul>
             </div>
             
