--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                     <li><a href="assignment-5.html" >Intro to Javascript</a></li>
                     <li><a href="assignment-6.html" >Javascript and JQuery</a></li>
                     <li><a href="assignment-7.html" >Chrome Developer Tools</a></li>
+                    <li><a href="assignment-8.html" >Content and Formats</a></li>
                 </ul>
             </div>
             
@@ -240,6 +241,9 @@
                     </li>
                     <li>
                         <a href="http://nodejs.org" target="blank">Node JS</a>
+                    </li>
+                    <li>
+                        <a href="http://leafletjs.com" target="blank">Leaflet JS</a>
                     </li>
                 </ul>
             </div>
