--- a/index.html
+++ b/index.html
@@ -160,6 +160,8 @@
                     <li><a href="assignment-6.html" >Javascript and JQuery</a></li>
                     <li><a href="assignment-7.html" >Chrome Developer Tools</a></li>
                     <li><a href="assignment-8.html" >Content and Formats</a></li>
+                    <li><a href="assignment-9.html" >Final Project Proposal</a></li>
+                    <li><a href="assignment-10.html" >Final Project Pre-Production</a></li>
                 </ul>
             </div>
             
