--- a/links.html
+++ b/links.html
@@ -75,6 +75,16 @@
                 </li>
             </ul>
         </div>
+
+        <div id="jquery">
+            <h3>jQuery Related Links</h3>
+            <ul>
+                <li>
+                     <a href="http://www.malsup.com/jquery/cycle/" target="blank">jQuery Cycle Plugin</a>
+                </li>
+            </ul>
+        </div>
+
     </div>
 
 </body>
