--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
                     <li><a href="assignment-8.html" >Content and Formats</a></li>
                     <li><a href="assignment-9.html" >Final Project Proposal</a></li>
                     <li><a href="assignment-10.html" >Final Project Pre-Production</a></li>
+                    <li><a href="assignment-11.html" >Final Project Landing Page</a></li>
                 </ul>
             </div>
             
