--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                     <li><a href="assignment-9.html" >Final Project Proposal</a></li>
                     <li><a href="assignment-10.html" >Final Project Pre-Production</a></li>
                     <li><a href="assignment-11.html" >Final Project Landing Page</a></li>
+                    <li><a href="assignment-12.html" >Final Project Revision 1</a></li>
                 </ul>
             </div>
             
