--- a/assignment-11.html
+++ b/assignment-11.html
@@ -44,7 +44,7 @@
     <div id="wrapper">
         <div id="assignment">
             <h2><a href="index.html">IML 400 Spring 2013</a></h2>
-            <h2>Assignment 11: Final Project Landing Page</h2>
+            <h2>Assignment 11: Final Project Landing Page (Iteration 1)</h2>
             <p>
                 Individual assignment.
             </p>
