updated student list

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         }
         #wrapper{
             width: 720px;
+            /*max-width: 720px;*/
             margin:0px auto;
 
         }
@@ -83,6 +84,7 @@
         }
         #student-websites, #assignments, #links{
             width:33%;
+            /*max-width:240px;*/
             float:left;
         }
         ul{
@@ -121,6 +123,7 @@
                 <ul>
                     <li><a href="http://storm.usc.edu/~/">Jennifer Kaijia Chen</a></li>
                     <li><a href="http://storm.usc.edu/~/">Danyel Clarice Copeland</a></li>
+                    <li><a href="http://storm.usc.edu/~/">Fatemeh Farahi Bouzanjani</a></li>
                     <li><a href="http://storm.usc.edu/~/">Sara Anna Frondoni</a></li>
                     <li><a href="http://storm.usc.edu/~/">Camille Anne Kanengiser</a></li>
                     <li><a href="http://storm.usc.edu/~/">Deena Khattab</a></li>
@@ -133,7 +136,6 @@
                     <li><a href="http://storm.usc.edu/~/">Kieran Reynolds</a></li>
                     <li><a href="http://storm.usc.edu/~/">Samantha Lynn Sineni</a></li>
                     <li><a href="http://storm.usc.edu/~/">Jasmine C. Siudzinski </a></li>
-                    <li><a href="http://storm.usc.edu/~/">John Sudsina </a></li>
                     <li><a href="http://storm.usc.edu/~/">Allison Tate-Cortese </a></li>
                     <li><a href="http://storm.usc.edu/~/">Jefferson H. Trieu</a></li>
                     <li><a href="http://storm.usc.edu/~/">Katharine Mary Weimer</a></li>
